<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Space_Yangu strings -->

	<string name="app_name">Space Yangu</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="title">SPACE YANGU</string>
	<string name="intro_1_entry">Blooming with hope,\nhand in hand,\nwelcome to a space\nof\nconnection\nand\nhealing</string>
    <string name="start_entry">READY TO EXPLORE? \n SPACE YANGU AWAITS</string>
	<string name="next_button">Next</string>
    <string name="skip_button">Skip</string>
	<string name="sign_up_button">Sign Up</string>
	<string name="sign_in_button">Sign In</string>
    <string name="intro_2_entry">You\'re officially part of the spark!\nLight up our community with your presence</string>
    <string name="sign_in">Sign In</string>
	<string name="sign_up">Sign Up</string>
    <string name="client_button_info">I am signing up as a normal user</string>
	<string name="therapist_button_info">I am signing up as a professional therapist</string>
	<string name="signup_client_button">Client</string>
	<string name="signup_therapist_button">Therapist</string>
    <string name="client_sign_up">CLIENT SIGN UP</string>
</resources>