<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_shape"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/space_yangu"
        android:layout_width="202dp"
        android:layout_height="115dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="@color/space_yangu_color"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo"
        app:layout_constraintVertical_bias="0.533" />

    <View
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:background="@drawable/logo_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="SIGN UP"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space_yangu" />

    <Button
        android:id="@+id/client_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_style_1"
        android:text="@string/signup_client_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintCircleRadius="100dp"
        tools:textAllCaps="true" />

    <Button
        android:id="@+id/therapist_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_style_1"
        android:text="@string/signup_therapist_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/client_button"
        tools:layout_constraintCircleRadius="100dp"
        tools:textAllCaps="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/client_button_info"
        android:textAlignment="center"
        android:textSize="30px"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/client_button"
        app:layout_constraintTop_toBottomOf="@+id/client_button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="159dp"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/therapist_button_info"
        android:textAlignment="center"
        android:textSize="30px"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/therapist_button"
        app:layout_constraintTop_toBottomOf="@+id/therapist_button" />


</androidx.constraintlayout.widget.ConstraintLayout>