<?xml version="1.0" encoding="UTF-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_shape">

    <TextView
        android:id="@+id/space_yangu"
        android:layout_width="191dp"
        android:layout_height="124.8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="@color/space_yangu_color"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/intro_2_entry"
        android:layout_width="267dp"
        android:layout_height="185dp"
        android:layout_gravity="center_horizontal|center"
        android:alpha="0.3"
        android:gravity="center"
        android:text="@string/intro_2_entry"
        android:textAllCaps="true"
        android:textColor="@color/text_color_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/space_yangu"
        app:layout_constraintStart_toStartOf="@+id/space_yangu"
        app:layout_constraintTop_toBottomOf="@+id/space_yangu" />


    <Button
        android:id="@+id/nxt_button"
        android:layout_width="96dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="65dp"
        android:text="@string/skip_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="93dp"
        android:layout_height="55dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="65dp"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/logo"
        android:layout_width="81dp"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="116dp"
        android:background="@drawable/logo_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="45dp"
        android:layout_height="24dp"
        android:layout_marginTop="48dp"
        android:background="@color/_bg_color"
        android:src="@drawable/_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

