<?xml version="1.0" encoding="UTF-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_shape"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/space_yangu"
        android:layout_width="191dp"
        android:layout_height="124.8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="@color/space_yangu_color"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <View
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/logo_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_style_1"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/space_yangu"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/space_yangu"
        app:layout_constraintTop_toBottomOf="@+id/space_yangu" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_style_1"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/signin_button"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/signin_button"
        app:layout_constraintTop_toBottomOf="@+id/signin_button" />


</androidx.constraintlayout.widget.ConstraintLayout>